# web-nexus-cms

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: lib.rs
cms/: Cargo.toml
cms/src/: app.rs  lib.rs  stores.rs
cms/src/components/: mod.rs
cms/src/pages/: dashboard.rs  login.rs  mod.rs  shows.rs  songs.rs
contracts/: Cargo.toml
contracts/src/: ai.rs  email.rs  lib.rs  lib.rs.bak  rbac.rs
edge/: Cargo.toml
edge/src/: lib.rs
state/: Cargo.toml
state/src/: lib.rs
