[package]
name = "web-nexus-api"
version.workspace = true
edition.workspace = true

[dependencies]
web-nexus-contracts = { path = "../contracts" }
web-nexus-state = { path = "../state" }

# Cloudflare Workers
worker = { workspace = true }

# Async
tokio = { workspace = true, features = ["sync", "rt"] }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Validation
garde = { workspace = true }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = { workspace = true }

# JWT Authentication
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }
base64 = "0.22"

# Tracing
tracing = { workspace = true }
