[package]
name = "web-nexus-contracts"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = "0.4"
garde = { workspace = true, features = ["email"] }
utoipa = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
