[package]
name = "web-nexus-edge"
version.workspace = true
edition.workspace = true

[dependencies]
web-nexus-contracts = { path = "../contracts" }
web-nexus-state = { path = "../state" }

# Cloudflare Workers
worker = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = "1"

# Error handling
color-eyre = { workspace = true }
thiserror = { workspace = true }

# Tracing
tracing = { workspace = true }
