[package]
name = "web-nexus-state"
version.workspace = true
edition.workspace = true

[dependencies]
web-nexus-contracts = { path = "../contracts" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
chrono = "0.4"

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }
color-eyre = { workspace = true }

# Tracing
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
